# Compression

./: CMakeLists.txt  PROSE.html  PROSE.md  README.md  alice_in_wonderland_compressed.piph  alice_in_wonderland_compressed.piphf  alice_in_wonderland_decompressed.txt  huff.h  lzw.cpp  lzw.h  main.cpp  test.txt  test_compressed.piph  test_compressed.piphf  test_compressed.txt
docs/drawio/: Activity diagram Huffman.drawio  Alphabetically ordered single frequencies.drawio  Overview.drawio
docs/img/: Alphabetically ordered single frequencies.drawio
docs/presentation/: ~$compression_v4.pptx
include/: file_handler.h  huff.h  lzw.h
src/: compression_handler.cpp  file_handler.cpp  huff.cpp  lzw.cpp
test_txt/: test.piph  test.piphf  test.pipl  test.txt  test_compressed.piph  test_compressed.piphf  test_compressed.pipl  test_decompressed_h.txt
